[build-system]
requires = [
  "setuptools>=40.0",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ["py35", "py36", "py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | .*\.egg-info
)/
'''
